# flake-iter

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/actions/: download-persist.yaml
.github/workflows/: build-and-release.yml  build-and-upload.yml  determinate-ci.yml  flakehub-publish-rolling.yml  nix.yml  release-branch.yml  release-pr.yml  release-tag.yml  rust.yml
src/: cli.rs  error.rs  flake.rs  lib.rs  main.rs  mixed-flake.nix
src/cmd/: build.rs  mod.rs  systems.rs
