[package]
name = "flake-iter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", default-features = false, features = [
  "color",
  "derive",
  "env",
  "error-context",
  "help",
  "std",
  "suggestions",
  "usage",
] }
color-eyre = { version = "0.6.3", default-features = false, features = [
  "issue-url",
] }
indicatif = { version = "0.17.8", default-features = false }
serde = { version = "1.0.197", default-features = false, features = [
  "derive",
  "std",
] }
serde_json = { version = "1.0.115", default-features = false, features = [
  "std",
] }
thiserror = { version = "1.0.61", default-features = false }
tracing = { version = "0.1.40", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "ansi",
  "env-filter",
] }
